# triennale-25

./: .gitignore  .gitmodules  README.md  flake.nix  reload-systemd.sh  shell.nix  start.sh  update-remote.sh
composer/: +  Cargo.toml  rustfmt.toml
composer/scripts/: set-position.py
composer/src/: main.rs
composer/src/installation/: mod.rs
composer/src/lights/: mod.rs
composer/src/robots/: mod.rs
controllino/sketch_0000/: sketch_0000.ino
director/: Cargo.toml  start.sh
director/src/: config.rs  main.rs
director/src/installation/: mod.rs
director/src/lights/: mod.rs
director/src/robots/: mod.rs
director/src/services/: mod.rs  robotpositions.rs
director/src/sparklings/: mod.rs
director/src/utils/: mod.rs
forward/: forward-jump-to-local.sh  forward-to-dafne-master.sh  forward-to-local.sh  play-2.sh  play-8.sh
lights/dimmer/: dimmer.ino
listener/: Cargo.toml  rustfmt.toml
listener/src/: main.rs
new-robots/: cable_robot.py  debug1_current_position.py  move_motor.py
new-robots/base/: debug2_reset_position.py  demo1_single_move.py  demo2_multi_sweep.py  demo3_multi_sync.py  demo4_random_sync..py
streaming/mjpeg-hls/: README.md  convert-streaming.sh  index.html  stream-mjpeg.sh
streaming/rtsp-hls/: README.md  convert-streaming.sh  stream-rtsp.md
systemd/: composer.service  director.service  run-composer.sh  run-director.sh
tunnel/: camera_tunnel.sh  camera_tunnels_all.sh  camera_tunnels_bottom.sh  camera_tunnels_side.sh  camera_viewer.html  camera_viewer.sh  camera_viewer_all.html  camera_viewer_bottom.html  camera_viewer_side.html
(+3 files in other folders)
