[package]
name = "director"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tokio = { version = "1.44.2", features = ["full"] }
futures = "0.3.31"
serialport = "4.7.1"
anyhow = "1.0.98"
reqwest = { version = "0.12.15", features = ["blocking"] }
rosc = "0.11.4"

